Nicer looking buttons and fully? added the following in: - KeyRandomToggle - Using previously saved framespeed for mods - Changes TextBox background to show you are changing the hotkey. - Probably one other thing I forgot.

--- a/App.config
+++ b/App.config
@@ -2,6 +2,7 @@
 <configuration>
 	<configSections>
   <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="GenshinNamecardINICreator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
    <section name="GenshinNamecardAutomater.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
   </sectionGroup>
  </configSections>
@@ -13,6 +14,26 @@
 		<add key="RandomLogin" value="1"/>
 	</appSettings>
  <userSettings>
+  <GenshinNamecardINICreator.Properties.Settings>
+   <setting name="OutputFolder" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="KeyPause" serializeAs="String">
+    <value>a VK_UP</value>
+   </setting>
+   <setting name="KeyCycleForward" serializeAs="String">
+    <value>a VK_RIGHT</value>
+   </setting>
+   <setting name="KeyCycleBackward" serializeAs="String">
+    <value>a VK_LEFT</value>
+   </setting>
+   <setting name="RandomLogin" serializeAs="String">
+    <value>1</value>
+   </setting>
+   <setting name="KeyCycleRandom" serializeAs="String">
+    <value>a VK_DOWN</value>
+   </setting>
+  </GenshinNamecardINICreator.Properties.Settings>
   <GenshinNamecardAutomater.Properties.Settings>
    <setting name="OutputFolder" serializeAs="String">
     <value />
