Full rewrite into MVVM style.
Fixed:
- Backwards toggle actually goes backwards and cycles to end of the list when under 0
- RandomLogin works on each refresh.

Added:
- RandomToggle
- New UI

--- a/App.config
+++ b/App.config
@@ -10,6 +10,7 @@
 		<add key="KeyPause" value="a VK_UP"/>
 		<add key="KeyCycleForward" value="a VK_RIGHT"/>
 		<add key="KeyCycleBackward" value="a VK_LEFT"/>
+		<add key="KeyCycleRandom" value="a VK_DOWN"/>
 		<add key="RandomLogin" value="1"/>
 	</appSettings>
  <userSettings>
