--- a/GenshinNamecardINICreator.csproj
+++ b/GenshinNamecardINICreator.csproj
@@ -24,6 +24,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <COMReference Include="{215d64d2-031c-33c7-96e3-61794cd1ee61}">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>4</VersionMinor>
+      <VersionMajor>2</VersionMajor>
+      <Guid>215d64d2-031c-33c7-96e3-61794cd1ee61</Guid>
+    </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Icons\Item_Genshin_Impact_A_New_World.ico" />
     <Content Include="namecard_hashes.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -42,7 +51,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <PackageReference Include="MintPlayer.ObservableCollection" Version="9.3.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="SimpleModal.WPF" Version="1.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.2" />
   </ItemGroup>
 
